# exlo_data

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
exlo_data/: __init__.py  components.json  config.json  projects.json  setups.json  users.json
tests/: test_exlo_data.py
