[metadata]
name = exlo_data
author = Olivier Vincent
author_email = ovinc.py@gmail.com
url = https://github.com/ovinc/exlo_data
description = Log data and config for the exlo package.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = logger, json, data
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm
python_requires =
    >=3.7
